--- a/style.css
+++ b/style.css
@@ -32,12 +32,20 @@ header {
   justify-content: space-between;
 }
 
-header nav {
+header .hamburger-menu-open {
+  display: none;
+}
+
+.hamburger-menu-wrapper {
+  display: none;
+}
+
+header .desktop-nav {
   display: flex;
   gap: 36px;
 }
 
-header nav a {
+header .desktop-nav a {
   color: var(--dark-grayish-blue);
 }
 
@@ -158,7 +166,7 @@ section#news-buttom {
 }
 
 /*Width:min-width'den büyük ise grid layout'a yerleştir değilse default -> bu sayede responsive*/
-@media (min-width: 880px) {
+@media (min-width: 720px) {
   main {
     grid-template-areas:
       "featuredNew featuredNew newSidebar"
@@ -182,7 +190,7 @@ section#news-buttom {
   }
 }
 
-@media (max-width: 880px) {
+@media (max-width: 720px) {
   .featured-new-body .featured-new-description {
     margin-top: 12px;
   }
@@ -198,5 +206,62 @@ section#news-buttom {
 
   .bottom-new-content {
     flex: 2;
+  }
+
+  header .desktop-nav {
+    display: none;
+  }
+
+  header .hamburger-menu-open {
+    display: block;
+    margin-left: auto;
+    margin-right: 24px;
+  }
+
+  .hamburger-menu-transparent-overlay {
+    flex: 1;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .mobile-nav-wrapper {
+    background-color: var(--off-white);
+    flex: 2;
+  }
+
+  .mobile-nav {
+    margin-left: 36px;
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 256px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .mobile-nav a {
+    color: var(--very-dark);
+  }
+
+  .close-icon {
+    margin-left: auto;
+    margin-top: 72px;
+    margin-right: 36px;
+    width: 50px;
+  }
+
+  .hamburger-menu-wrapper {
+    display: flex;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 100%;
+    transition: left 200ms ease;
+  }
+
+  .open {
+    opacity: 100;
+    left: 0;
   }
 }
